--- a/package.json
+++ b/package.json
@@ -1,3 +1,4 @@
+
 {
   "name": "pinpoint",
   "version": "0.1.0",
@@ -9,18 +10,11 @@
     "start": "next start",
     "lint": "next lint",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+   "deploy": "gh-pages -d .next"
   },
   "dependencies": {
-    "@fortawesome/free-solid-svg-icons": "^6.7.2",
-    "@fortawesome/react-fontawesome": "^0.2.2",
-    "date-fns": "^4.1.0",
-    "date-fns-tz": "^3.2.0",
-    "fortawesome": "^0.0.1-security",
     "framer-motion": "^11.15.0",
-    "luxon": "^3.5.0",
     "next": "15.1.3",
-    "papaparse": "^5.4.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
@@ -28,7 +22,7 @@
     "@eslint/eslintrc": "^3",
     "eslint": "^9",
     "eslint-config-next": "15.1.3",
-    "gh-pages": "^6.3.0",
+    "gh-pages": "^6.2.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1"
   }
