--- a/package.json
+++ b/package.json
@@ -9,10 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
+    "fortawesome": "^0.0.1-security",
     "framer-motion": "^11.15.0",
+    "luxon": "^3.5.0",
     "next": "15.1.3",
+    "papaparse": "^5.4.1",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-fontawesome": "^1.7.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
