--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "fortawesome": "^0.0.1-security",
     "framer-motion": "^11.15.0",
+    "lucide-react": "^0.487.0",
     "luxon": "^3.5.0",
     "next": "15.1.3",
     "papaparse": "^5.4.1",
